gitops-apps/wikijs/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      volumes:
      - name: wikijs-data
        persistentVolumeClaim:
          claimName: wikijs-data
      containers:
      - name: wikijs
        image: ghcr.io/requarks/wiki:2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: wikijs-data
          mountPath: /wiki/data
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 1Gi
