gitops-apps/wikijs/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wiki
spec:
  selector:
    app: wikijs
  ports:
  - port: 80
    targetPort: 3000
